# model-bridge

./: CLA.zh.md  Cargo.toml  Justfile  config.example.toml
.csa/plans/: ai-reviewed-commit.toml  code-review.toml  commit.toml  pr-codex-bot.toml
.githooks/: pre-commit
config/: README.md  group-a.toml  group-b.toml
crates/mb-annotate/: Cargo.toml
crates/mb-annotate/src/: main.rs
crates/mb-core/: Cargo.toml
crates/mb-core/src/: lib.rs
crates/mb-core/src/core_domain/: auth.rs  cache_router.rs  canonical.rs  error.rs  health.rs  mod.rs  ports.rs  quota.rs  router.rs  types.rs
crates/mb-feedback/: Cargo.toml
crates/mb-feedback/src/: export.rs  lib.rs  models.rs  store.rs
crates/mb-server/: Cargo.toml
crates/mb-server/src/: bootstrap.rs  config.rs  feedback.rs  handler.rs  health.rs  lib.rs  main.rs  stream_handler.rs
crates/mb-server/src/config/: tests.rs
crates/mb-server/src/inbound/: mod.rs  openai_chat.rs  openai_wire.rs
crates/mb-server/src/inbound/openai_chat/: tests.rs
crates/mb-server/src/outbound/: mod.rs  ollama.rs  openai_chat.rs  streaming.rs
crates/mb-server/src/outbound/ollama/: tests.rs
crates/mb-server/src/outbound/openai_chat/: tests.rs
crates/mb-server/tests/: integration_test.rs
crates/mb-server/tests/common/: mod.rs
docs/: deployment.md
