[package]
name = "mb-feedback"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
mb-core = { path = "../mb-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
