[package]
name = "mb-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "mb"
path = "src/main.rs"

[features]
default = []
feedback = ["dep:mb-feedback", "dep:chrono"]

[dependencies]
mb-core = { path = "../mb-core" }
mb-feedback = { path = "../mb-feedback", optional = true }
chrono = { version = "0.4", optional = true }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
rand = "0.9"
